--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.7",
+    "apollo-client": "^2.6.8",
+    "graphql": "^14.5.8",
     "next": "9.1.6",
+    "next-with-apollo": "^4.3.0",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-apollo": "^3.1.3",
+    "react-dom": "16.12.0",
+    "styled-components": "^4.4.1"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.6"
   }
 }
