--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "next": "9.1.6",
     "next-with-apollo": "^4.3.0",
     "react": "16.12.0",
