--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql-tag": "^2.10.1",
     "next": "9.1.6",
     "next-with-apollo": "^4.3.0",
+    "prop-types": "^15.7.2",
     "react": "16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "16.12.0",
